WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261854
[WGSL] call to 'max' is ambiguous as decimal is not added to floating point number
https://bugs.webkit.org/show_bug.cgi?id=261854
Summary
[WGSL] call to 'max' is ambiguous as decimal is not added to floating point n...
Mike Wyrzykowski
Reported
2023-09-20 17:30:55 PDT
[WGSL] call to 'max' is ambiguous as decimal is not added to floating point number
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2023-09-20 17:31:31 PDT
radar://115813155
Mike Wyrzykowski
Comment 2
2023-09-20 17:35:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18000
EWS
Comment 3
2023-09-21 00:17:58 PDT
Committed
268237@main
(e0a4e0edfaa5): <
https://commits.webkit.org/268237@main
> Reviewed commits have been landed. Closing PR #18000 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug