[WGSL] call to 'max' is ambiguous as decimal is not added to floating point number https://bugs.webkit.org/show_bug.cgi?id=261854 <radar://115813155>

Reviewed by Tadeu Zagallo.

Make sure doubles contain a decimal point. Otherwise we will end up with
compiler errors due to ambiguous function overloads like max(d, 0) where
d is a double.

* Source/WTF/wtf/dtoa.cpp:
(WTF::numberToString):
(WTF::numberToStringWithTrailingPoint):
* Source/WTF/wtf/dtoa.h:
* Source/WTF/wtf/dtoa/double-conversion.cc:
* Source/WTF/wtf/dtoa/double-conversion.h:
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

* Tools/TestWebKitAPI/Tests/WGSL/MetalGenerationTests.cpp:
(TestWGSLAPI::TEST):
Update test expectation

Canonical link: https://commits.webkit.org/268237@main